// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPIntegrationOverview should display data about the integration 1`] = `
<div
  className="full-width"
>
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value="my little integration"
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value="just a small integration, which is very practical and friendly"
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={true}
          name="http.triggers.ticket-created"
          onChange={[Function]}
        >
          Ticket created
        </ForwardRef(CheckBox)>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={false}
          name="http.triggers.ticket-updated"
          onChange={[Function]}
        >
          Ticket updated
        </ForwardRef(CheckBox)>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={false}
          name="http.triggers.ticket-message-created"
          onChange={[Function]}
        >
          Ticket message created
        </ForwardRef(CheckBox)>
      </FormGroup>
      <InputField
        error="Only https protocol is allowed"
        help={
          <div>
            You can use
             
            <code>
              {{ticket.customer.email}}
            </code>
             
            to pass the email of the ticket customer. See other
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              variables
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="$a"
        placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value="http://httpbin.org/post"
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="POST"
      >
        <option
          key="GET"
          value="GET"
        >
          GET
        </option>
        <option
          key="POST"
          value="POST"
        >
          POST
        </option>
        <option
          key="PUT"
          value="PUT"
        >
          PUT
        </option>
        <option
          key="DELETE"
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Request content type"
        name="http.request_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
        <option
          value="application/x-www-form-urlencoded"
        >
          application/x-www-form-urlencoded
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="header"
          fields={
            Array [
              Object {
                "key": "Authorization",
                "value": "Bearer a57sd4as6d4",
              },
              Object {
                "key": "Foo",
                "value": "bar",
              },
            ]
          }
          onChange={[Function]}
          title="Header"
          validate={[Function]}
        />
      </FormGroup>
      <JSONBody
        form={
          Object {
            "baz": Object {
              "bazile": "bazar",
            },
            "foo": "bar",
          }
        }
        onChange={[Function]}
      />
      <div>
        <ForwardRef
          className="mr-2"
          isLoading={false}
          type="submit"
        >
          Save changes
        </ForwardRef>
        <ForwardRef
          intent="destructive"
          isLoading={false}
          onClick={[Function]}
        >
          Deactivate HTTP integration
        </ForwardRef>
        <ConfirmButton
          className="float-right"
          confirmationContent="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          intent="destructive"
          onConfirm={[Function]}
        >
          <ButtonIconLabel
            icon="delete"
          >
            Delete HTTP integration
          </ButtonIconLabel>
        </ConfirmButton>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HTTPIntegrationOverview should display data with url-encoded format 1`] = `
<div
  className="full-width"
>
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value="my little integration"
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value="just a small integration, which is very practical and friendly"
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={true}
          name="http.triggers.ticket-created"
          onChange={[Function]}
        >
          Ticket created
        </ForwardRef(CheckBox)>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={false}
          name="http.triggers.ticket-updated"
          onChange={[Function]}
        >
          Ticket updated
        </ForwardRef(CheckBox)>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={false}
          name="http.triggers.ticket-message-created"
          onChange={[Function]}
        >
          Ticket message created
        </ForwardRef(CheckBox)>
      </FormGroup>
      <InputField
        error="Only https protocol is allowed"
        help={
          <div>
            You can use
             
            <code>
              {{ticket.customer.email}}
            </code>
             
            to pass the email of the ticket customer. See other
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              variables
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="$a"
        placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value="http://httpbin.org/post"
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="POST"
      >
        <option
          key="GET"
          value="GET"
        >
          GET
        </option>
        <option
          key="POST"
          value="POST"
        >
          POST
        </option>
        <option
          key="PUT"
          value="PUT"
        >
          PUT
        </option>
        <option
          key="DELETE"
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Request content type"
        name="http.request_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/x-www-form-urlencoded"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
        <option
          value="application/x-www-form-urlencoded"
        >
          application/x-www-form-urlencoded
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="header"
          fields={
            Array [
              Object {
                "key": "Authorization",
                "value": "Bearer a57sd4as6d4",
              },
              Object {
                "key": "Foo",
                "value": "bar",
              },
            ]
          }
          onChange={[Function]}
          title="Header"
          validate={[Function]}
        />
      </FormGroup>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="field"
          fields={
            Array [
              Object {
                "key": "foo",
                "value": "bar",
              },
              Object {
                "key": "baz",
                "value": "foo",
              },
            ]
          }
          onChange={[Function]}
          title="Form field"
        />
      </FormGroup>
      <div>
        <ForwardRef
          className="mr-2"
          isLoading={false}
          type="submit"
        >
          Save changes
        </ForwardRef>
        <ForwardRef
          intent="destructive"
          isLoading={false}
          onClick={[Function]}
        >
          Deactivate HTTP integration
        </ForwardRef>
        <ConfirmButton
          className="float-right"
          confirmationContent="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          intent="destructive"
          onConfirm={[Function]}
        >
          <ButtonIconLabel
            icon="delete"
          >
            Delete HTTP integration
          </ButtonIconLabel>
        </ConfirmButton>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HTTPIntegrationOverview should display default values because there is no integration (creation) 1`] = `
<div
  className="full-width"
>
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value=""
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={true}
          name="http.triggers.ticket-created"
          onChange={[Function]}
        >
          Ticket created
        </ForwardRef(CheckBox)>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={true}
          name="http.triggers.ticket-updated"
          onChange={[Function]}
        >
          Ticket updated
        </ForwardRef(CheckBox)>
        <ForwardRef(CheckBox)
          className="mb-2"
          isChecked={true}
          name="http.triggers.ticket-message-created"
          onChange={[Function]}
        >
          Ticket message created
        </ForwardRef(CheckBox)>
      </FormGroup>
      <InputField
        error={null}
        help={
          <div>
            You can use
             
            <code>
              {{ticket.customer.email}}
            </code>
             
            to pass the email of the ticket customer. See other
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              variables
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="*"
        placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value=""
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="GET"
      >
        <option
          key="GET"
          value="GET"
        >
          GET
        </option>
        <option
          key="POST"
          value="POST"
        >
          POST
        </option>
        <option
          key="PUT"
          value="PUT"
        >
          PUT
        </option>
        <option
          key="DELETE"
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <ObjectListField
          fieldName="header"
          fields={Array []}
          onChange={[Function]}
          title="Header"
          validate={[Function]}
        />
      </FormGroup>
      <div>
        <ForwardRef
          className="mr-2"
          isLoading={false}
          type="submit"
        >
          Add integration
        </ForwardRef>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HTTPIntegrationOverview should display loading state because the integration is loading 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;
